tests/tooling/fixtures/native/execution/positive/message_send_nil_mutable_global_identifier_non_elided.objc3
module MessageSendNilMutableGlobalIdentifierNonElidedExecution;

let receiver = nil;

fn read() -> i32 {
  return 1;
}

fn main() -> i32 {
  receiver = read();
  receiver = nil;
  return [receiver ping];
}
