tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_message_selector_segment_pure.objc3
module MisplacedQualifierMessageSelectorSegmentPure;

fn main() -> i32 {
  let receiver = 1;
  return [receiver head: 1 pure: 2];
}